crates/flight-rules/tests/snapshots/snapshots__compiled_equality_comparison.snap
---
source: crates/flight-rules/tests/snapshots.rs
expression: snap
---
{
  "instructions": [
    {
      "LoadVar": 0
    },
    {
      "LoadConst": 1.0
    },
    {
      "Compare": "Equal"
    },
    {
      "JumpFalse": 5
    },
    {
      "Action": 0
    }
  ],
  "variable_map": {
    "gear_position": 0
  },
  "actions": [
    {
      "LedOn": {
        "target": "GEAR"
      }
    }
  ],
  "stack_size": 8
}
