crates/flight-rules/tests/snapshots/snapshots__compiled_or_rule.snap
---
source: crates/flight-rules/tests/snapshots.rs
expression: snap
---
{
  "instructions": [
    {
      "LoadVar": 0
    },
    {
      "LoadConst": 0.0
    },
    {
      "Compare": "NotEqual"
    },
    {
      "LoadVar": 1
    },
    {
      "LoadConst": 0.0
    },
    {
      "Compare": "NotEqual"
    },
    "Or",
    {
      "JumpFalse": 9
    },
    {
      "Action": 0
    }
  ],
  "variable_map": {
    "master_caution": 1,
    "master_warn": 0
  },
  "actions": [
    {
      "LedOn": {
        "target": "WARN"
      }
    }
  ],
  "stack_size": 8
}
