crates/flight-rules/tests/snapshots/snapshots__compiled_with_hysteresis.snap
---
source: crates/flight-rules/tests/snapshots.rs
expression: snap
---
{
  "instructions": [
    {
      "LoadVar": 0
    },
    {
      "LoadConst": 10000.0
    },
    {
      "Hysteresis": 0
    },
    {
      "JumpFalse": 5
    },
    {
      "Action": 0
    }
  ],
  "variable_map": {
    "altitude": 0
  },
  "actions": [
    {
      "LedOn": {
        "target": "ALT"
      }
    }
  ],
  "stack_size": 8
}
