crates/flight-rules/tests/snapshots/snapshots__rules_validation_error_bad_action.snap
---
source: crates/flight-rules/tests/snapshots.rs
expression: err.to_string()
---
Validation error: Rule 1: Unsupported action syntax: do_something_weird()
