crates/flight-rules/tests/snapshots/snapshots__rules_validation_error_bad_schema.snap
---
source: crates/flight-rules/tests/snapshots.rs
expression: err.to_string()
---
Validation error: Unsupported schema version: bad/schema
