crates/flight-rules/tests/snapshots/snapshots__rules_validation_error_empty_condition.snap
---
source: crates/flight-rules/tests/snapshots.rs
expression: err.to_string()
---
Validation error: Rule 1: Rule condition cannot be empty
